fixed some buggy things

--- a/main_app/templates/add_ingredient.html
+++ b/main_app/templates/add_ingredient.html
@@ -10,7 +10,7 @@
     <title>Add Ingredient</title>
 </head>
 <header>
-    <button onclick="location.href='/meal_wizard'" role="link" data-href="/">Meal Wizard</button>
+    <button><a href="/meal_wizard">Meal Wizard</a></button>
     <h1>Welcome {{ user.first_name }}</h1>
     <span><button><a href="/home">Home</a></button><button><a href="/logout">Logout</a></button></span>
 </header>
