--- a/main_app/templates/kitchen.html
+++ b/main_app/templates/kitchen.html
@@ -10,7 +10,7 @@
     <title>Kitchen</title>
 </head>
 <header>
-    <button><a href="/meal_wizard">Meal Wizard</a></button>
+    <span><button><a href="/meal_wizard">Meal Wizard</a></button><button><a href="/add_ingredient">Add grocery item</a></button></span>
     <h1>Welcome {{ user.first_name }}</h1>
     <button><a href="/logout">Logout</a></button>
 </header>
