--- a/main_app/templates/test_form.html
+++ b/main_app/templates/test_form.html
@@ -35,8 +35,8 @@
                     <label class="col-sm-4 col-form-label" for="ingred1">Choose a Culture</label>
                     <div>
                         <select required class="form-control" type="text" name="category">
-                            <option class="form-control" disabled selected value="">Ethnicity</option><!-- ie ethnicity -->
-                            <option value="">I'm uncultured (leave blank)</option>
+                            <option class="form-control" value="">Ethnicity</option><!-- ie ethnicity -->
+                            <option selected value="">I'm uncultured (leave blank)</option>
                             <option value="brazilian">Brazilian</option>
                             <option value="carribean">Carribean</option>
                             <option value="chinese">Chinese</option>
@@ -60,8 +60,8 @@
                     <label class="col-sm-4 col-form-label" for="ingred1">Choose Date Night or a Holiday</label>
                     <div>
                         <select required class="form-control" type="text" name="category">
-                            <option class="form-control" disabled selected value="">Holiday</option><!-- ie ethnicity -->
-                            <option value="">Leave Blank</option>
+                            <option class="form-control" value="">Holiday</option><!-- ie ethnicity -->
+                            <option selected value="">None</option>
                             <option value="date_night">Date Night</option>
                             <option value="black_history_month">Black History Month</option>
                             <option value="christmas">Christmas</option>
@@ -79,8 +79,8 @@
                     <label class="col-sm-4 col-form-label" for="ingred1">Choose a Category</label>
                     <div>
                         <select required class="form-control" type="text" name="category">
-                            <option class="form-control" disabled selected value="">Category</option><!-- ie ethnicity -->
-                            <option value="">leave blank</option>
+                            <option class="form-control" value="">Category</option><!-- ie ethnicity -->
+                            <option selected value="">Leave blank</option>
                             <option value="one_pot_or_pan">One-Pot or Pan</option>
                             <option value="instant_pot">Instant Pot</option>
                             <option value="slow_cooker">Slow Cooker</option>
@@ -96,8 +96,8 @@
                     <label class="col-sm-4 col-form-label" for="ingred1">Choose a Dietary Restriction</label>
                     <div>
                         <select required class="form-control" type="text" name="category">
-                            <option class="form-control" disabled selected value="">Allergy</option><!-- ie ethnicity -->
-                            <option value="">leave blank</option>
+                            <option class="form-control" value="">Allergy</option><!-- ie ethnicity -->
+                            <option selected value="">None</option>
                             <option value="gluten_free">Vegetarian</option>
                             <option value="vegan">Vegan</option>
                             <option value="pescatarian">Pescatarian</option>
