final changes for version 1.0

--- a/main_app/templates/test_form.html
+++ b/main_app/templates/test_form.html
@@ -78,8 +78,8 @@
                     <label class="col-sm-4 col-form-label" for="ingred1">Choose a Category</label>
                     <div>
                         <select class="form-control" type="text" name="category">
-                            <option class="form-control" disabled selected value="">Category</option><!-- ie ethnicity -->
-                            <option value="">leave blank</option>
+                            <option class="form-control" disabled selected>Category</option><!-- ie ethnicity -->
+                            <option value="drinks">Drinks</option>
                             <option value="one_pot_or_pan">One-Pot or Pan</option>
                             <option value="instant_pot">Instant Pot</option>
                             <option value="slow_cooker">Slow Cooker</option>
@@ -95,14 +95,14 @@
                     <label class="col-sm-4 col-form-label" for="ingred1">Choose a Dietary Restriction</label>
                     <div>
                         <select class="form-control" type="text" name="category">
-                            <option class="form-control" disabled selected value="">Allergy</option><!-- ie ethnicity -->
-                            <option value="">leave blank</option>
+                            <option class="form-control" disabled selected>Allergy</option><!-- ie ethnicity -->
                             <option value="gluten_free">Vegetarian</option>
                             <option value="vegan">Vegan</option>
                             <option value="pescatarian">Pescatarian</option>
                             <option value="gluten_free">Gluten-Free</option>
                             <option value="dairy_free">Dairy-Free</option>
                             <option value="low_carb">Low-Carb</option>
+                            <option value="kid_friendly">Kid-Friendly</option>
                         </select>
                     </div>
                 </div>
