--- a/main_app/templates/login_page.html
+++ b/main_app/templates/login_page.html
@@ -84,7 +84,7 @@
                 <div class="form-group row">
                     <label class="col-sm-4 col-form-label" for="Password">Password</label>
                     <div>
-                        <input class="form-control" type="text" name="password">
+                        <input class="form-control" type="password" name="password">
                     </div>
                 </div>
                 
