--- a/main_app/templates/view_all.html
+++ b/main_app/templates/view_all.html
@@ -18,13 +18,13 @@
 
     <main class="tableArea">
         <h2 class="centered">{{ category.name }}</h2>
-        <div class="table">
+        <div class="table ">
             <table class="table table-striped table table-bordered table-sm ">
                 <tr>
                     <th>Ingredient</th>
                     <th>Quantity</th>
                     <th>Date added</th>
-                    <th>Use/Sell by date</th>
+                    <th>Use/Freeze by date</th>
                     <th>Actions</th>
                 </tr>
                 {% for ingredient in category.ingredients.all %}
@@ -40,7 +40,7 @@
                 {%endfor%}
 
             </table>
-            <button><a href="/add_ingredient">Add another item</a></button>
+            <button><a href="/ingredient_add/{{ category.id }}">Add another item</a></button>
         </div>
     </main>
 
