--- a/main_app/static/css/style .css
+++ b/main_app/static/css/style .css
@@ -27,7 +27,6 @@ body h1 {
     flex-wrap: wrap;
     justify-content: space-evenly;
     padding: 25px;
-
 }
 
 .panel {
@@ -49,7 +48,6 @@ body h1 {
     width: 75%;
     padding: 25px;
     margin: 25px;
-
 }
 
 .addSection {
@@ -75,9 +73,8 @@ select:required:invalid {
 
 .add {
     text-decoration: underline;
-    color: green
+    color: green;
 }
-
 
 .tableArea {
     border: solid 2px black;
@@ -92,6 +89,36 @@ select:required:invalid {
 
 table {
     width: 90%;
+    /* border-radius: 50px; */
+}
+
+.table-curved {
+    border-collapse: separate;
+    border: solid #ccc 1px;
+    border-radius: 6px;
+    border-left: 0px;
+    border-top: 0px;
+}
+.table-curved > thead:first-child > tr:first-child > th {
+    border-bottom: 0px;
+    border-top: solid #ccc 1px;
+}
+.table-curved td,
+.table-curved th {
+    border-left: 1px solid #ccc;
+    border-top: 1px solid #ccc;
+}
+.table-curved > :first-child > :first-child > :first-child {
+    border-radius: 6px 0 0 0;
+}
+.table-curved > :first-child > :first-child > :last-child {
+    border-radius: 0 6px 0 0;
+}
+.table-curved > :last-child > :last-child > :first-child {
+    border-radius: 0 0 0 6px;
+}
+.table-curved > :last-child > :last-child > :last-child {
+    border-radius: 0 0 6px 0;
 }
 
 .centered {
@@ -108,4 +135,3 @@ table {
     margin-left: auto;
     margin-right: auto;
 }
-
