add login redirect when user.id not in session

--- a/main_app/templates/ingredient_add.html
+++ b/main_app/templates/ingredient_add.html
@@ -99,6 +99,9 @@
                                 <option value="box(es)">box(es)</option>
                                 <option value="ounce(s)">ounce(s)</option>
                                 <option value="pound(s)">pound(s)</option>
+                                <option value="stick(s)">stick(s)</option>
+                                <option value="half-gallon(s)">half-gallon(s)</option>
+                                <option value="gallon(s)">gallon(s)</option>
                             </select>
                         </div>
                     </div>
